use a different way to prevent margin collapsing

--- a/styles/stack.scss
+++ b/styles/stack.scss
@@ -6,7 +6,13 @@ $stack-header-height: 46px;
   position: relative;
   width: 902px;
   margin: 0 auto;
-  overflow: hidden;
+
+  // prevent margin collapsing
+  &:before {
+    content:"";
+    display:table;
+    clear:both;
+  }
 
   .page {
     width: 900px;
